To do list finished

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="header">
           <h1>ToDoList</h1>
-          <div class="input">
+          <div class="inputSection">
             <input id="input" type="text" name="" placeholder="Add List Item" value="">
             <button id="btn" type="button" name="button">Click</button>
          </div>
@@ -31,11 +31,12 @@
 
       <main>
         <div class="list">
+          <div class="cornered"></div>
           <ul id="myList">
 
           </ul>
 
-        </div>
+       </div>
 
       </main>
 
